[fix] navbtn padding on mobile

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ li {
 }
 
 .nav-btn {
-  padding: 1.875em 20% 1.25em 12%;
+  padding: 1.875em 24% 1.25em 13%;
   border-bottom: 5px solid var(--secondarybg);
 }
 
